--- a/src/style/index.css
+++ b/src/style/index.css
@@ -5,9 +5,32 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: black;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+ul {
+  flex-wrap:wrap ;
+   list-style: none; 
+}
+.content-center{
+  text-align:center;
+}
+.header h1{
+  color: greenyellow;
+}
+li{
+  max-width: 300;
+  background-color: aqua;
+}
+.punch {
+  font-weight: bold;
+}
+.punch:hover {
+  font-size: 50px;
+  color:red;
+}
+
